--- a/docs/civitas/celestis/object/component/class-use/ObjectComponent.html
+++ b/docs/civitas/celestis/object/component/class-use/ObjectComponent.html
@@ -108,7 +108,7 @@ loadScripts(document, 'script');</script>
 <div class="table-header col-second">Constructor</div>
 <div class="table-header col-last">Description</div>
 <div class="col-first even-row-color"><code>&nbsp;</code></div>
-<div class="col-second even-row-color"><code><a href="../../BaseObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">BaseObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
+<div class="col-second even-row-color"><code><a href="../../BaseObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.complex.Quaternion,civitas.celestis.math.complex.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">BaseObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;location,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;acceleration,
  <a href="../../../math/quaternion/Quaternion.html" title="class in civitas.celestis.math.quaternion">Quaternion</a>&nbsp;rotation,
@@ -120,7 +120,7 @@ loadScripts(document, 'script');</script>
 <div class="block">Creates a new object.</div>
 </div>
 <div class="col-first odd-row-color"><code>&nbsp;</code></div>
-<div class="col-second odd-row-color"><code><a href="../../ImmovableObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">ImmovableObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
+<div class="col-second odd-row-color"><code><a href="../../ImmovableObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.complex.Quaternion,civitas.celestis.math.complex.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">ImmovableObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;location,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;acceleration,
  <a href="../../../math/quaternion/Quaternion.html" title="class in civitas.celestis.math.quaternion">Quaternion</a>&nbsp;rotation,
@@ -154,7 +154,7 @@ loadScripts(document, 'script');</script>
 <div class="table-header col-second">Constructor</div>
 <div class="table-header col-last">Description</div>
 <div class="col-first even-row-color"><code>&nbsp;</code></div>
-<div class="col-second even-row-color"><code><a href="../ComponentObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.math.quaternion.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">ComponentObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
+<div class="col-second even-row-color"><code><a href="../ComponentObject.html#%3Cinit%3E(java.util.UUID,civitas.celestis.math.vector.Vector3,civitas.celestis.math.vector.Vector3,civitas.celestis.math.complex.Quaternion,civitas.celestis.math.complex.Quaternion,civitas.celestis.physics.profile.PhysicsProfile,civitas.celestis.graphics.model.Model,java.util.List)" class="member-name-link">ComponentObject</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/UUID.html" title="class or interface in java.util" class="external-link">UUID</a>&nbsp;uniqueId,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;location,
  <a href="../../../math/vector/Vector3.html" title="class in civitas.celestis.math.vector">Vector3</a>&nbsp;acceleration,
  <a href="../../../math/quaternion/Quaternion.html" title="class in civitas.celestis.math.quaternion">Quaternion</a>&nbsp;rotation,
